tools/cephfs: handle removed dentries when replaying journal

Fixes: http://tracker.ceph.com/issues/20440
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>